[workspace]
members = [
    "wasm/interactive-engine",
    "wasm/editor-engine"
]

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"